# RayTracingInOneWeekend

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
benches/: bench.rs
src/: camera.rs  color.rs  lib.rs  main.rs  material.rs  ray.rs  vec3d.rs
src/geometry/: mod.rs  sphere.rs
