[package]
name = "raytracing-in-one-weekend"
version = "0.1.0"
authors = ["J2ghz <j2.00ghz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
image = "0.23"
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false